# identity-client

./: .gitignore  CONTRACT.md  README.md  jitpack.yml
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/com/rzautomation/identity/client/: AccessTokenVerifier.kt  Exceptions.kt  HttpTransport.kt  IdentityClient.kt  IdentityConfig.kt  SessionPolicy.kt
kotlin/src/test/kotlin/com/rzautomation/identity/client/: AccessTokenVerifierTest.kt  IdentityClientTest.kt  SessionPolicyTest.kt  TestSupport.kt
python/: README.md  pyproject.toml
python/identity_client/: __init__.py  client.py  deletions.py  fastapi.py  sessions.py  testing.py
python/tests/: test_client.py  test_deletions.py  test_fastapi.py  test_fastapi_deletion.py  test_sessions.py
web/: README.md  identity-auth.css  identity-auth.js  package.json
